--- a/publicFolder/index.html
+++ b/publicFolder/index.html
@@ -5,9 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./styles.css" rel="stylesheet">
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline bg-green-400">
-    Creating new app using html css tailwind js
-  </h1>
+<body class="custombg">
+ 
+   <div id="question-container">
+    <p id="question"></p>
+    
+
+   </div>
+
+
+
 </body>
+<script src="js-folder/data.js"></script>
 </html>
