--- a/publicFolder/test.html
+++ b/publicFolder/test.html
@@ -8,6 +8,7 @@
 <body>
  
    <div class=" grid grid-cols-4 gap-3 m-4">
+      <p class="text-base">Test</p>
     <div class="flex justify-center items-center bg-blue-300">div1</div>
        <div class="flex justify-center items-center bg-blue-300">div1</div>
 
