--- a/publicFolder/index.html
+++ b/publicFolder/index.html
@@ -9,12 +9,14 @@
  
    <div id="question-container">
     <p id="question"></p>
-  
+     
 
    </div>
 
 
 
 </body>
-<script src="js-folder/data.js"></script>
+<script src="js-folder/Quiz-data.js"></script>
+<script src="js-folder/index.js"></script>
+<script src="js-folder/quizIndex.js"></script>
 </html>
