--- a/publicFolder/MainMenu.html
+++ b/publicFolder/MainMenu.html
@@ -6,14 +6,17 @@
     <title>Quizizit- your customazizable Quiz App</title>
 </head>
 <body class="quizBackground">
-  <header class="flex p-4 justify-center flex-row items-center fixed left-0 right-0">
+  <header class="flex p-4 justify-center flex-row items-center fixed top-0 left-0 right-0">
    <img src="./assets/icons/images/brain.png" class="w-[100px] h-[100px]">
    <div class="text-[35px] font-bold">QUIZIZIT</div>
   </header>
-<div class="grid grid-cols-3 pt-[150px] gap-6 p-2">
-    <div class="bg-blue-300 h-[200px]">div1</div>
-      <div class="bg-blue-300">div2</div>
-        <div class="bg-blue-300">div3</div>
+<div class="grid grid-cols-2 sm:grid-cols-3  gap-10 p-2 pr-[50px] pl-[50px] mt-[120px] ">
+    <div class="quizContainer flex  flex-col  p-8 items-center gap-2">
+      <p class="text-5xl font-bold">Math Quiz</p>
+      <button>Take Quiz</button>
+    </div>
+    <div class="quizContainer">div2</div>
+    <div class="quizContainer">div3</div>
 </div>
 </body>
 </html>
