--- a/publicFolder/MainMenu.html
+++ b/publicFolder/MainMenu.html
@@ -5,7 +5,7 @@
     <link href="./styles.css" rel="stylesheet">
     <title>Quizizit- your customazizable Quiz App</title>
 </head>
-<body class="quizBackground">
+<body class="quizBackground min-h-screen">
   <header class="flex p-4 justify-center flex-row items-center">
    <img src="./assets/images/brain.png" class="w-[100px] h-[100px]">
    <div class="text-[35px] font-bold">QUIZIZIT</div>
