--- a/publicFolder/Questions.html
+++ b/publicFolder/Questions.html
@@ -5,7 +5,19 @@
     <link href="./styles.css" rel="stylesheet">
     <title>Questions</title>
 </head>
-<body class="quizBackGround">
-    
+<body class="quizBackGround min-h-screen  flex flex-row justify-center items-center px-4">
+<div class="mainQuestionContainer ">
+  <div class="QuizTitleContainer">
+    <img src="./assets/subject-icon/math.png" class="w-[40px] h-[40px]">  
+    <p class="font-bold text-3xl">Math Quiz</p>
+  </div>
+      <p class="sm:mt-35 mt-25 sm:text-2xl font-bold questionNum-js"></p>
+      <p class="sm:text-4xl font-bold question-js"></p>
+      <div class="grid grid-cols-2 gap-5 mt-2 button-options-js">
+       
+      </div>
+ </div>
+
 </body>
+<script src="./js-folder/MathQuestions.js" type="module"></script>
 </html>
