--- a/publicFolder/test.html
+++ b/publicFolder/test.html
@@ -8,18 +8,18 @@
 </head>
 <body class="quizBackGround min-h-screen  flex flex-row justify-center items-center px-4">
 
- <div class=" w-[300px] h-[300px] sm:w-[500px] sm:h-[500px] bg-blue-950 rounded-2xl flex flex-col  items-center relative">
-  <div class="absolute bg-rose-400 top-0 left-0 right-0 h-20 sm:h-30 rounded-tr-2xl rounded-tl-2xl flex flex-row justify-center items-center gap-2">
+ <div class="mainQuestionContainer ">
+  <div class="QuizTitleContainer">
     <img src="./assets/subject-icon/math.png" class="w-[40px] h-[40px]">  
     <p class="font-bold text-3xl">Math Quiz</p>
   </div>
-      <p class="sm:mt-35 mt-25 sm:text-2xl">Question 1 out of 5</p>
-
-      <div class="grid grid-cols-2 gap-2">
-        <button>Answer 1</button>
-        <button>Answer 2</button>
-        <button>Answer 3</button>
-        <button>Answer 4</button>
+      <p class="sm:mt-35 mt-25 sm:text-2xl font-bold">Question 1 out of 5</p>
+      <p class="sm:text-4xl font-bold">1+1</p>
+      <div class="grid grid-cols-2 gap-5 mt-2">
+        <button class="ansButton">Answer 1</button>
+        <button class="ansButton">Answer 2</button>
+        <button class="ansButton">Answer 3</button>
+        <button class="ansButton">Answer 4</button>
       </div>
  </div>
 
