--- a/publicFolder/Questions.html
+++ b/publicFolder/Questions.html
@@ -6,6 +6,12 @@
     <title>Questions</title>
 </head>
 <body class="quizBackGround min-h-screen  flex flex-row justify-center items-center px-4">
+  <audio class="correct" hidden>
+    <source src="./assets/sounds/Correct Answer sound effect.mp3" type="audio/mp3">
+  </audio>
+  <audio class="wrong" hidden>
+    <source src="./assets/sounds/Wrong Answer Sound effect.mp3" type="audio/mp3">
+  </audio>
 <div class="mainQuestionContainer ">
   <div class="QuizTitleContainer">
     <img src="./assets/subject-icon/math.png" class="w-[40px] h-[40px]">  
