--- a/publicFolder/test.html
+++ b/publicFolder/test.html
@@ -6,25 +6,9 @@
     <title>testing</title>
   <link href="./styles.css" rel="stylesheet">
 </head>
-<body class="quizBackGround min-h-screen  flex flex-row justify-center items-center px-4">
-
- <div class="mainQuestionContainer ">
-  <div class="QuizTitleContainer">
-    <img src="./assets/subject-icon/math.png" class="w-[40px] h-[40px]">  
-    <p class="font-bold text-3xl">Math Quiz</p>
-  </div>
-      <p class="sm:mt-35 mt-25 sm:text-2xl font-bold">Question 1 out of 5</p>
-      <p class="sm:text-4xl font-bold">1+1</p>
-      <div class="grid grid-cols-2 gap-5 mt-2">
-        <button class="ansButton">Answer 1</button>
-        <button class="ansButton">Answer 2</button>
-        <button class="ansButton">Answer 3</button>
-        <button class="ansButton">Answer 4</button>
-      </div>
- </div>
-
-   
-
+<body class="quizBackGround h-screen  flex flex-col justify-center items-center px-4">
+  <div class="bg-blue-950 w-[500px] h-[500px] rounded-2xl">1</div>
+ 
 </body>
 
 
