--- a/publicFolder/Questions.html
+++ b/publicFolder/Questions.html
@@ -12,7 +12,7 @@
   <audio class="wrong" hidden>
     <source src="./assets/sounds/Wrong Answer Sound effect.mp3" type="audio/mp3">
   </audio>
-<div class="mainQuestionContainer ">
+<div class="mainQuestionContainer mainQuestionContainer-js">
   <div class="QuizTitleContainer">
     <img src="./assets/subject-icon/math.png" class="w-[40px] h-[40px]">  
     <p class="font-bold text-3xl">Math Quiz</p>
