creating exit button for score

--- a/publicFolder/Questions.html
+++ b/publicFolder/Questions.html
@@ -5,7 +5,7 @@
     <link href="./styles.css" rel="stylesheet">
     <title>Questions</title>
 </head>
-<body class="quizBackGround min-h-screen  flex flex-row justify-center items-center px-4">
+<body class="quizBackGround min-h-screen  flex flex-row justify-center items-center px-4 mainBody">
   <audio class="correct" hidden>
     <source src="./assets/sounds/Correct Answer sound effect.mp3" type="audio/mp3">
   </audio>
