--- a/publicFolder/MainMenu.html
+++ b/publicFolder/MainMenu.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./styles.css" rel="stylesheet">
+    <link rel="icon" href="./assets/images/brain.png" type="image/png">
     <title>Quizizit- your customazizable Quiz App</title>
 </head>
 <body class="quizBackground min-h-screen">
@@ -13,20 +14,20 @@
 <div class="grid grid-cols-2 sm:grid-cols-3  gap-10 p-2 pr-[50px] pl-[50px] mt-[20px] ">
     <div class="MathQuizContainer flex  flex-col  p-8 items-center gap-3">
       <img src="./assets/subject-icon/math.png" class="sm:w-[100px] sm:h-[100px] w-[50px] h-[50px]">
-      <p class="text-[10px] sm:text-5xl font-bold">Math Quiz</p>
+      <p class="text-[10px] sm:text-3xl font-bold">Math Quiz</p>
       <p class="text-[10px] sm:text-[15px]">10 Items</p>
       <button class="button mathButton"><img src="./assets/icons/play.png" class="w-[20px] h-[20px]">Take</button>
     </div>
     <div class="ScienceQuizContainer flex  flex-col  p-8 items-center gap-3">
       <img src="./assets/subject-icon/science.png" class="sm:w-[100px] sm:h-[100px] w-[50px] h-[50px]">
-      <p class="text-[10px] sm:text-5xl font-bold">Science Quiz</p>
+      <p class="text-[10px] sm:text-3xl font-bold">Science Quiz</p>
       <p class="text-[10px] sm:text-[15px]">10 Items</p>
       <button class="button"><img src="./assets/icons/play.png" class="w-[20px] h-[20px]">Take</button>
     </div>
     
      <div class="TechQuizContainer flex  flex-col  p-8 items-center gap-3">
       <img src="./assets/subject-icon/Technology.png" class="sm:w-[100px] sm:h-[100px] w-[50px] h-[50px]">
-      <p class="text-[10px] sm:text-5xl font-bold">Technology Quiz</p>
+      <p class="text-[10px] sm:text-3xl font-bold">Technology Quiz</p>
       <p class="text-[10px] sm:text-[15px]">10 Items</p>
       <button class="button" ><img src="./assets/icons/play.png" class="w-[20px] h-[20px]">Take</button>
     </div>
