--- a/publicFolder/Questions.html
+++ b/publicFolder/Questions.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./styles.css" rel="stylesheet">
+    <link rel="icon" href="./assets/images/brain.png" type="image/png">
     <title>Questions</title>
 </head>
 <body class="quizBackGround min-h-screen  flex flex-row justify-center items-center px-4 mainBody">
