making dynamic array for subjects

--- a/publicFolder/Questions.html
+++ b/publicFolder/Questions.html
@@ -26,5 +26,5 @@
  </div>
 
 </body>
-<script src="./js-folder/MathQuestions.js" type="module"></script>
+<script src="./js-folder/Questions.js" type="module"></script>
 </html>
