--- a/publicFolder/MainMenu.html
+++ b/publicFolder/MainMenu.html
@@ -16,20 +16,20 @@
       <img src="./assets/subject-icon/math.png" class="sm:w-[100px] sm:h-[100px] w-[50px] h-[50px]">
       <p class="text-[10px] sm:text-3xl font-bold">Math Quiz</p>
       <p class="text-[10px] sm:text-[15px]">10 Items</p>
-      <button class="button mathButton"><img src="./assets/icons/play.png" class="w-[20px] h-[20px]">Take</button>
+      <button class="button mathButton" data-category ="Math"><img src="./assets/icons/play.png" class="w-[20px] h-[20px]">Take</button>
     </div>
     <div class="ScienceQuizContainer flex  flex-col  p-8 items-center gap-3">
       <img src="./assets/subject-icon/science.png" class="sm:w-[100px] sm:h-[100px] w-[50px] h-[50px]">
       <p class="text-[10px] sm:text-3xl font-bold">Science Quiz</p>
       <p class="text-[10px] sm:text-[15px]">10 Items</p>
-      <button class="button"><img src="./assets/icons/play.png" class="w-[20px] h-[20px]">Take</button>
+      <button class="button scienceButton" data-category ="Science"><img src="./assets/icons/play.png" class="w-[20px] h-[20px]">Take</button>
     </div>
     
      <div class="TechQuizContainer flex  flex-col  p-8 items-center gap-3">
       <img src="./assets/subject-icon/Technology.png" class="sm:w-[100px] sm:h-[100px] w-[50px] h-[50px]">
       <p class="text-[10px] sm:text-3xl font-bold">Technology Quiz</p>
       <p class="text-[10px] sm:text-[15px]">10 Items</p>
-      <button class="button" ><img src="./assets/icons/play.png" class="w-[20px] h-[20px]">Take</button>
+      <button class="button techButton" data-category ="Tech"><img src="./assets/icons/play.png" class="w-[20px] h-[20px]">Take</button>
     </div>
 </div>
 </body>
