adding customize features

--- a/publicFolder/MainMenu.html
+++ b/publicFolder/MainMenu.html
@@ -31,6 +31,12 @@
       <p class="text-[10px] sm:text-[15px]">10 Items</p>
       <button class="button techButton" data-category ="Tech"><img src="./assets/icons/play.png" class="w-[20px] h-[20px]">Take</button>
     </div>
+
+    <div class="flex flex-row">
+      <div>div1</div>
+       <div>div2</div>
+        <div>div3</div>
+    </div>
 </div>
 </body>
 <script src="./js-folder/MainMenu.js" type="module"></script>
