--- a/publicFolder/Questions.html
+++ b/publicFolder/Questions.html
@@ -19,10 +19,11 @@
     <p class="font-bold text-3xl">Math Quiz</p>
   </div>
       <p class="sm:mt-35 mt-25 sm:text-2xl font-bold questionNum-js"></p>
-      <p class="sm:text-1xl font-bold question-js"></p>
+      <p class="sm:text-2xl text-[12px] font-bold question-js break-words text-center"></p>
       <div class="grid grid-cols-1 gap-5 mt-2 button-options-js">
-       
       </div>
+
+ 
  </div>
 
 </body>
