--- a/publicFolder/MainMenu.html
+++ b/publicFolder/MainMenu.html
@@ -31,13 +31,21 @@
       <p class="text-[10px] sm:text-[15px]">10 Items</p>
       <button class="button techButton" data-category ="Tech"><img src="./assets/icons/play.png" class="w-[20px] h-[20px]">Take</button>
     </div>
-
-    <div class="flex flex-row">
-      <div>div1</div>
-       <div>div2</div>
-        <div>div3</div>
-    </div>
 </div>
+ <div class="flex flex-row justify-between px-5 py-5">
+      <div class="ManagerContainer">
+        <img src="./assets/icons/plus.png" class="w-[20px] h-[20px]">
+        <p>Create new Quiz</p>
+      </div>
+         <div class="ManagerContainer">
+        <img src="./assets/icons/move-to-folder.png" class="w-[20px] h-[20px]">
+        <p>Manage Quizzes</p>
+      </div>
+       <div class="ManagerContainer">
+        <img src="./assets/icons/search.png" class="w-[20px] h-[20px]">
+        <p>Search</p>
+      </div>
+    </div>
 </body>
 <script src="./js-folder/MainMenu.js" type="module"></script>
 </html>
