--- a/publicFolder/MainMenu.html
+++ b/publicFolder/MainMenu.html
@@ -32,17 +32,17 @@
       <button class="button techButton" data-category ="Tech"><img src="./assets/icons/play.png" class="w-[20px] h-[20px]">Take</button>
     </div>
 </div>
- <div class="flex flex-row justify-between px-5 py-5">
+ <div class="flex flex-row justify-center px-5 py-5 gap-2">
       <div class="ManagerContainer">
-        <img src="./assets/icons/plus.png" class="w-[20px] h-[20px]">
+        <img src="./assets/icons/plus.png" class="w-[20px] h-[20px] sm:w-[50px] sm:h-[50px]">
         <p>Create new Quiz</p>
       </div>
          <div class="ManagerContainer">
-        <img src="./assets/icons/move-to-folder.png" class="w-[20px] h-[20px]">
+        <img src="./assets/icons/move-to-folder.png" class="w-[20px] h-[20px]  sm:w-[50px] sm:h-[50px]">
         <p>Manage Quizzes</p>
       </div>
        <div class="ManagerContainer">
-        <img src="./assets/icons/search.png" class="w-[20px] h-[20px]">
+        <img src="./assets/icons/search.png" class="w-[20px] h-[20px]  sm:w-[50px] sm:h-[50px]">
         <p>Search</p>
       </div>
     </div>
