--- a/publicFolder/MainMenu.html
+++ b/publicFolder/MainMenu.html
@@ -11,7 +11,7 @@
    <img src="./assets/images/brain.png" class="w-[100px] h-[100px]">
    <div class="text-[35px] font-bold">QUIZIZIT</div>
   </header>
-<div class="grid grid-cols-2 sm:grid-cols-3  gap-10 p-2 pr-[50px] pl-[50px] mt-[20px] ">
+<div class="grid grid-cols-2 sm:grid-cols-3  gap-10 p-2 pr-[50px] pl-[50px] mt-[20px]">
     <div class="MathQuizContainer flex  flex-col  p-8 items-center gap-3">
       <img src="./assets/subject-icon/math.png" class="sm:w-[100px] sm:h-[100px] w-[50px] h-[50px]">
       <p class="text-[10px] sm:text-3xl font-bold">Math Quiz</p>
@@ -32,7 +32,7 @@
       <button class="button techButton" data-category ="Tech"><img src="./assets/icons/play.png" class="w-[20px] h-[20px]">Take</button>
     </div>
 </div>
- <div class="flex flex-row justify-center px-5 py-5 gap-2">
+ <div class="flex flex-row justify-center px-5 py-5 gap-2 mb-52">
       <div class="ManagerContainer">
         <img src="./assets/icons/plus.png" class="w-[20px] h-[20px] sm:w-[50px] sm:h-[50px]">
         <p>Create new Quiz</p>
@@ -42,6 +42,10 @@
         <p>Manage Quizzes</p>
       </div>
     </div>
+
+    <footer class="bg-gray-400 h-60 text-white text-center">
+         <p class="">2025 Kenneth Domdom. All rights reserved.</p>
+    </footer>
 </body>
 <script src="./js-folder/MainMenu.js" type="module"></script>
 </html>
