--- a/publicFolder/MainMenu.html
+++ b/publicFolder/MainMenu.html
@@ -43,8 +43,16 @@
       </div>
     </div>
 
-    <footer class="bg-gray-400 h-60 text-white text-center">
-         <p class="">2025 Kenneth Domdom. All rights reserved.</p>
+    <footer class="bg-gray-400 h-60 text-white flex flex-col justify-center items-center gap-3">
+
+         <div>
+          <div class=" flex flex-row gap-10">
+              <a href="https://www.facebook.com/kenneth.domdom.142"><img src="./assets/icons/facebook (1).png" class="footerIcon"></a>
+              <a href="https://www.instagram.com/i_kennnn_not/"><img src="./assets/icons/instagram (1).png" class="footerIcon"></a>
+              <a href="https://github.com/ikennot"><img src="./assets/icons/github-sign.png" class="footerIcon"></a>
+          </div>
+         </div>
+         <p class="mt-10">2025 Kenneth Domdom. All rights reserved.</p>
     </footer>
 </body>
 <script src="./js-folder/MainMenu.js" type="module"></script>
