--- a/publicFolder/test.html
+++ b/publicFolder/test.html
@@ -6,15 +6,12 @@
     <title>testing</title>
   <link href="./styles.css" rel="stylesheet">
 </head>
-<body class="quizBackGround h-screen  flex flex-col justify-center items-center px-4">
-  <div class="bg-blue-950 w-[300px] h-[300px] sm:w-[500px] sm:h-[500px] rounded-2xl flex flex-col items-center justify-center p-5 gap-5">
-    <p class=" text-[20px] sm:text-4xl font-bold">Quiz Completed</p>
-    <img src="./assets/icons/check.png" class=" h-[50px] w-[50px] sm:h-[150px] sm:w-[150px]">
-    <p class="text-[15px] sm:text-3xl">Your Score</p>
-    <p class="text-[30px] sm:text-6xl font-bold">10/10</p>
-    <button class="button">Exit</button>
-  </div>
- 
+<body class="quizBackGround h-screen  flex flex-col items-center px-4">
+ <p class="text-6xl my-6">Quiz Creation</p>
+ <div class=" flex flex-row gap-3.5">
+  <p class="text-4xl">Enter Category:</p>
+  <input type="text" class="bg-white text-black p-2.5">
+ </div>
 </body>
 
 
