Continuation of  Creating template

--- a/publicFolder/test.html
+++ b/publicFolder/test.html
@@ -7,10 +7,15 @@
   <link href="./styles.css" rel="stylesheet">
 </head>
 <body class="quizBackGround h-screen  flex flex-col items-center px-4">
- <p class="text-6xl my-6">Quiz Creation</p>
- <div class=" flex flex-row gap-3.5">
-  <p class="text-4xl">Enter Category:</p>
-  <input type="text" class="bg-white text-black p-2.5">
+ <p class="text-5xl my-6 font-bold">Quiz Creation</p>
+ <div class=" flex flex-row gap-3.5 items-center mb-4">
+  <p class="sm:text-3xl text-[15px]">Enter Category:</p>
+  <input type="text" placeholder="Enter Title" class="bg-white text-black p-1.5 sm:p-2.5">
+ </div>
+
+ <div class="flex flex-row items-center">
+  <p class="text-2xl font-bold">Question 1</p>
+ </div>
  </div>
 </body>
 
