--- a/publicFolder/test.html
+++ b/publicFolder/test.html
@@ -13,8 +13,19 @@
   <input type="text" placeholder="Enter Title" class="bg-white text-black p-1.5 sm:p-2.5">
  </div>
 
- <div class="flex flex-row items-center">
+ <div class="flex flex-col items-center gap-4">
   <p class="text-2xl font-bold">Question 1</p>
+ <input type="text" placeholder="Enter Question" class="bg-white text-black p-1.5 sm:p-2.5 sm:w-[400px]">
+  <div >
+    <input type="text" placeholder="Option 1" class="bg-white text-black p-1.5 sm:p-2.5">
+    <input type="text" placeholder="Option 2" class="bg-white text-black p-1.5 sm:p-2.5">
+    <input type="text" placeholder="Option 3" class="bg-white text-black p-1.5 sm:p-2.5">
+    <input type="text" placeholder="Option 4" class="bg-white text-black p-1.5 sm:p-2.5">
+  </div>
+  <div class="flex flex-row items-center gap-3">
+    <button class="button">Done</button>
+    <button class="button">next Question</button>
+  </div>
  </div>
  </div>
 </body>
