--- a/publicFolder/MainMenu.html
+++ b/publicFolder/MainMenu.html
@@ -33,7 +33,7 @@
     </div>
 </div>
  <div class="flex flex-row justify-center px-5 py-5 gap-2 mb-52">
-      <div class="ManagerContainer">
+      <div class="ManagerContainer create-quiz-js">
         <img src="./assets/icons/plus.png" class="w-[20px] h-[20px] sm:w-[50px] sm:h-[50px]">
         <p>Create new Quiz</p>
       </div>
