creating select option for subject category

--- a/publicFolder/MainMenu.html
+++ b/publicFolder/MainMenu.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./styles.css" rel="stylesheet">
     <link rel="icon" href="./assets/images/brain.png" type="image/png">
-    <title>Quizizit- your customazizable Quiz App</title>
+    <title>Quizizit- your customizable Quiz App</title>
 </head>
 <body class="quizBackground min-h-screen">
   <header class="flex p-4 justify-center flex-row items-center">
