--- a/publicFolder/QuizCreation.html
+++ b/publicFolder/QuizCreation.html
@@ -8,8 +8,19 @@
 <body class="quizBackGround h-screen  flex flex-col  items-center px-4">
  <p class=" text-2xl sm:text-5xl my-6 font-bold">Quiz Creation</p>
  <div class=" flex flex-row gap-3.5 justify-center items-center mb-4">
-  <p class="sm:text-2xl text-[15px]">Enter Category:</p>
+  <p class="sm:text-2xl text-[15px]">Subject name:</p>
   <input type="text" placeholder="Enter Title" class="bg-white text-black  sm:p-2.5 p-0.5">
+ </div>
+  <div class=" flex flex-row gap-3.5 justify-center items-center mb-4">
+  <p class="sm:text-2xl text-[15px]">Subject Category:</p>
+<select class="subject-category bg-white text-black text-[15px] p-2.5">
+<option value="" disabled selected>Choose Category</option>
+<option value="academic">Academics</option>
+<option value="general-knowledge">General knowledge</option>
+<option value="logic">Logic and Brain Teasers</option>
+<option value="tech">Technology and Web Development</option>
+<option value="pop">Pop Culture and Entertainment</option>
+</select>
  </div>
 
  <div class="flex flex-col items-center gap-4 QuestionContainer-js">
