--- a/publicFolder/QuizCreation.html
+++ b/publicFolder/QuizCreation.html
@@ -9,7 +9,7 @@
  <p class=" text-2xl sm:text-5xl my-6 font-bold">Quiz Creation</p>
  <div class=" flex flex-row gap-3.5 justify-center items-center mb-4">
   <p class="sm:text-2xl text-[15px]">Subject name:</p>
-  <input type="text" placeholder="Enter Title" class="bg-white text-black  sm:p-2.5 p-0.5">
+  <input type="text" placeholder="Enter Title" class="bg-white text-black  sm:p-2.5 p-0.5 subject-name">
  </div>
   <div class=" flex flex-row gap-3.5 justify-center items-center mb-4">
   <p class="sm:text-2xl text-[15px]">Subject Category:</p>
