dynamic colors of quizcontainer

--- a/publicFolder/MainMenu.html
+++ b/publicFolder/MainMenu.html
@@ -11,7 +11,7 @@
    <img src="./assets/images/brain.png" class="w-[100px] h-[100px]">
    <div class="text-[35px] font-bold">QUIZIZIT</div>
   </header>
-<div class="grid grid-cols-2 sm:grid-cols-3  gap-10 p-2 pr-[50px] pl-[50px] mt-[20px]">
+<div class="grid grid-cols-2 sm:grid-cols-3 gap-10 p-2 pr-[50px] pl-[50px] mt-[20px] quiz-grid-container">
    
 </div>
  <div class="flex flex-row justify-center px-5 py-5 gap-2 mb-52">
