completing dynamically generated quiz containers-

--- a/publicFolder/Questions.html
+++ b/publicFolder/Questions.html
@@ -14,9 +14,8 @@
     <source src="./assets/sounds/Wrong Answer Sound effect.mp3" type="audio/mp3">
   </audio>
 <div class="mainQuestionContainer mainQuestionContainer-js">
-  <div class="QuizTitleContainer">
-    <img src="./assets/subject-icon/math.png" class="w-[40px] h-[40px]">  
-    <p class="font-bold text-3xl">Math Quiz</p>
+  <div class="QuizTitleContainer quiz-container-js">
+    
   </div>
       <p class="sm:mt-35 mt-25 sm:text-2xl font-bold questionNum-js"></p>
       <p class="sm:text-2xl text-[12px] font-bold question-js break-words text-center"></p>
