creating update functionality

--- a/publicFolder/MainMenu.html
+++ b/publicFolder/MainMenu.html
@@ -19,7 +19,7 @@
         <img src="./assets/icons/plus.png" class="w-[20px] h-[20px] sm:w-[50px] sm:h-[50px]">
         <p>Create new Quiz</p>
       </div>
-         <div class="ManagerContainer">
+         <div class="ManagerContainer manage-quiz-js">
         <img src="./assets/icons/move-to-folder.png" class="w-[20px] h-[20px]  sm:w-[50px] sm:h-[50px]">
         <p>Manage Quizzes</p>
       </div>
