--- a/publicFolder/Update.html
+++ b/publicFolder/Update.html
@@ -12,7 +12,7 @@
   <p class="sm:text-2xl text-[15px]">Subject name:</p>
   <input type="text" placeholder="Enter Title" class="bg-white text-black  sm:p-2.5 p-0.5 subject-name">
  </div>
-  <div class=" flex flex-row gap-3.5 justify-center items-center mb-4">
+  <div class=" flex flex-row gap-3.5 justify-center items-center mb-4 option-container">
   <p class="sm:text-2xl text-[15px]">Subject Category:</p>
 <select class="subject-category bg-white text-black text-[15px] p-2.5">
 <option value="" disabled selected>Choose Category</option>
@@ -22,6 +22,7 @@
 <option value="tech">Technology and Web Development</option>
 <option value="pop">Pop Culture and Entertainment</option>
 </select>
+</div>
 </body>
-
+<script src="./js-folder/Update.js" type="module"></script>
 </html>
