creating dynamic option in updating quiz

--- a/publicFolder/Update.html
+++ b/publicFolder/Update.html
@@ -12,15 +12,14 @@
   <p class="sm:text-2xl text-[15px]">Subject name:</p>
   <input type="text" placeholder="Enter Title" class="bg-white text-black  sm:p-2.5 p-0.5 subject-name">
  </div>
-  <div class=" flex flex-row gap-3.5 justify-center items-center mb-4 option-container">
+  <div class=" flex flex-row gap-3.5 justify-center items-center mb-4 options-container">
   <p class="sm:text-2xl text-[15px]">Subject Category:</p>
 <select class="subject-category bg-white text-black text-[15px] p-2.5">
 <option value="" disabled selected>Choose Category</option>
-<option value="academic">Academics</option>
-<option value="general-knowledge">General knowledge</option>
-<option value="logic">Logic and Brain Teasers</option>
-<option value="tech">Technology and Web Development</option>
-<option value="pop">Pop Culture and Entertainment</option>
+<span class="choose-option">
+
+</span>
+
 </select>
 </div>
 </body>
