debugging questionList Value

--- a/publicFolder/Update.html
+++ b/publicFolder/Update.html
@@ -17,11 +17,12 @@
 <select class="subject-category bg-white text-black text-[15px] p-2.5">
 <option value="" disabled selected>Choose Category</option>
 <span class="choose-option">
-
 </span>
-
 </select>
 </div>
+ <div class="flex flex-col items-center gap-4 QuestionContainer-js">
+  
+ </div>
 </body>
 <script src="./js-folder/Update.js" type="module"></script>
 </html>
