--- a/publicFolder/ManageQuiz.html
+++ b/publicFolder/ManageQuiz.html
@@ -14,6 +14,11 @@
   <div class="grid grid-cols-2 sm:grid-cols-3 gap-10 p-2 pr-[50px] pl-[50px] mt-[20px] quiz-grid-container">
    
 </div>
+ <div class="flex flex-row justify-center px-5 py-5 gap-2 mb-52">
+      <div class="ManagerContainer back-home-js">
+        <p>Back to home</p>
+      </div>
+    </div>
 </body>
 <script src="./js-folder/ManageQuiz.js" type="module"></script>
 </html>
