--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="refresh" content="0; url=mainmenu.html" />
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
     <p>Redirecting to mainmenu...</p>
