--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="refresh" content="0; url=mainmenu.html" />
     <link href="styles.css" rel="stylesheet">
+        <link rel="icon" href="./assets/images/brain.png" type="image/png">
   </head>
   <body>
     <p>Redirecting to mainmenu...</p>
