--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
         <link rel="icon" href="./assets/images/brain.png" type="image/png">
   </head>
   <body>
-    <p>Redirecting to mainmenu...</p>
+    <p class="bg-black">Redirecting to mainmenu...</p>
   </body>
 </html>
