--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=mainmenu.html" />
+    <meta http-equiv="refresh" content="0; url=MainMenu.html" />
     <link href="styles.css" rel="stylesheet">
         <link rel="icon" href="./assets/images/brain.png" type="image/png">
   </head>
